src/test/deca/syntax/valid/resultats/test17_assign_monster-lex.res
'{': [@0,245:245='{',<36>,14:0]
IDENT: [@1,248:250='int',<26>,15:1]
IDENT: [@2,252:252='x',<26>,15:5]
',': [@3,253:253=',',<33>,15:6]
IDENT: [@4,254:254='y',<26>,15:7]
'=': [@5,256:256='=',<29>,15:9]
FLOAT: [@6,258:262='12.0f',<46>,15:11]
',': [@7,263:263=',',<33>,15:16]
IDENT: [@8,264:264='z',<26>,15:17]
'=': [@9,265:265='=',<29>,15:18]
'true': [@10,266:269='true',<24>,15:19]
';': [@11,270:270=';',<39>,15:23]
'}': [@12,272:272='}',<37>,16:0]
