src/test/deca/syntax/invalid/resultats/test15_decl-lex.res
'{': [@0,301:301='{',<36>,14:0]
IDENT: [@1,304:306='int',<26>,15:1]
IDENT: [@2,308:308='x',<26>,15:5]
'=': [@3,310:310='=',<29>,15:7]
INT: [@4,312:312='3',<1>,15:9]
'}': [@5,314:314='}',<37>,16:0]
